fixed the table whitespace error

--- a/global_temp/static/style.css
+++ b/global_temp/static/style.css
@@ -44,7 +44,7 @@ display: block;
 
 table{
     position: relative;
-   margin-top:-550px;
+   /* margin-top:-550px; */
 
 
 }
